# INFT2503

./: .gitignore  README.md
01/: CMakeLists.txt  a.cpp  b.cpp
02/: CMakeLists.txt  task1.cpp  task2.md  task3.md  task4.cpp  task5.cpp  task6.cpp
03/: CMakeLists.txt
03/circle/: circle.cpp  circle.hpp
03/commodity/: commodity.cpp  commodity.hpp
03/string/: string_practice.cpp
04/: CMakeLists.txt  task1.cpp  task2.cpp
05/: CMakeLists.txt  main.cpp
06/: CMakeLists.txt
06/chess/: ChessBoard.hpp  ChessBoardPrint.hpp  main.cpp
06/web-server/: main.cpp
07/: CMakeLists.txt
07/fraction/: fraction.cpp  fraction.hpp  main.cpp
07/set/: main.cpp  set.cpp  set.hpp
08/: CMakeLists.txt
08/task1/: main.cpp
08/task2/: Pair.cpp  Pair.hpp  main.cpp
09/: CMakeLists.txt  main.cpp
2022h/: CMakeLists.txt  main.cpp
2022v/: CMakeLists.txt  main.cpp
2023v/: CMakeLists.txt  main.cpp
